--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "jn_check_manager",
-    "short_name": "jn_check_manager",
+    "name": "检化验管理",
+    "short_name": "检化验",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
